--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,3 +1,19 @@
 #head{
-
+    width: 1500px;
+}
+#chart{
+    left: 20px;
+    top: 70px;
+    position: absolute;
+    width:1200px;
+    height:650px
+}
+#menu{
+    position: absolute;
+    top:70px;
+    left: 1230px;
+    width:280px;
+}
+#chartEdit{
+    position: absolute;
 }
