--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -2,18 +2,16 @@
     width: 1500px;
 }
 #chart{
-    left: 20px;
-    top: 70px;
     position: absolute;
+    right:30px;
     width:1200px;
     height:650px
 }
 #menu{
-    position: absolute;
-    top:70px;
-    left: 1230px;
-    width:280px;
+    position:absolute;
+    display: inline-block;
 }
 #chartEdit{
     position: absolute;
 }
+
